--- a/styles/projects.css
+++ b/styles/projects.css
@@ -81,6 +81,13 @@
     text-align: center;
 }
 
+.project-title.back {
+    padding: 1rem;
+    text-decoration: underline;
+    margin: 0;
+    text-align: center;
+}
+
 /* Card back face */
 .card-back {
     background: rgba(7, 1, 34, 0.506);
@@ -93,6 +100,7 @@
 }
 
 .project-description {
+    text-align: justify;
     margin: 1rem 0;
     line-height: 1.6;
 }
@@ -106,6 +114,8 @@
 .project-btn {
     padding: 0.8rem 1.5rem;
     border: none;
+    text-decoration: none;
+    font-size: 14px;
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
@@ -136,5 +146,33 @@
     
     .project-card {
         height: 350px;
+    }
+
+    .project-title {
+        padding: 0.5rem;
+        margin: 0;
+        text-align: center;
+    }
+    
+    .project-title.back {
+        font-size: 4.5vw;
+        padding: 0.5rem;
+        text-decoration: underline;
+        margin: 0;
+        text-align: center;
+    }
+
+    .project-description {
+        line-height: 1.3;
+        font-size: 3.5vw;
+    }
+
+    .project-description {
+        text-align: justify;
+        margin: 1rem 0;
+    }
+
+    .project-btn {
+        font-size: 3vw;
     }
 }
