--- a/styles/hero.css
+++ b/styles/hero.css
@@ -47,7 +47,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    /* background: var(--gradient-1); */
+    background: var(--gradient-1);
     z-index: -1;
 }
 
@@ -63,7 +63,6 @@
     font-size: 3.5vmax;
     line-height: 1.1;
     margin: 1rem;
-    /* color: white; */
     animation: fadeInUp 1s ease forwards;
 }
 
@@ -86,7 +85,7 @@
     align-items: center;
     justify-content: center;
     padding: 1rem;
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 .hero-icons i{
