--- a/styles/hero.css
+++ b/styles/hero.css
@@ -93,12 +93,12 @@
     height: 40px;
     width: 40px;
     color: var(--secondary);
-    transition: font-size 0.2s ease-in-out, color 0.2s;
+    transition: transform 0.2s, color 0.2s;
 }
 
 .hero-icons i:hover {
-    font-size: 30px;
-    color: white;
+    transform: scale(1.3);
+    color: rgb(46, 79, 212);
 }
 
 .button {
