--- a/styles/hero.css
+++ b/styles/hero.css
@@ -85,7 +85,7 @@
 
 .hero-icons {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 20px;
     align-items: center;
     justify-content: center;
