--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,6 +1,6 @@
 /* Projects section container */
 .projects {
-    padding: 4rem 2rem;
+    padding: 2rem 2rem 4rem 2rem;
     max-width: 100%;
     margin: 0;
 }
@@ -9,11 +9,10 @@
     display: flex;
     align-items: center;
     margin-left: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     font-size: clamp(26px, 5vw, 32px);
     white-space: nowrap;
 }
-
 
 .section-title::after {
     content: '';
@@ -23,6 +22,13 @@
     margin-left: 20px;
     background-color: var(--text-secondary);
 } 
+
+.project-help{
+    margin-left: 40px;
+    margin-bottom: 2rem;
+    font-size: 1.7max;
+    color: rgb(168, 168, 168);
+}
 
 /* Grid layout for projects */
 .projects-grid {
@@ -36,7 +42,7 @@
 .project-card {
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 430px;
     perspective: 1000px;
     cursor: pointer;
 }
@@ -66,7 +72,7 @@
 }
 
 .card-front {
-    background: rgba(7, 1, 34, 0.492);
+    background: #030d26;
 }
 
 .project-img {
@@ -77,7 +83,6 @@
 
 .project-title {
     padding: 1rem;
-    margin: 0;
     text-align: center;
 }
 
@@ -90,13 +95,12 @@
 
 /* Card back face */
 .card-back {
-    background: rgba(7, 1, 34, 0.506);
+    background: #112240;
     transform: rotateY(180deg);
     padding: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    cursor: default;
 }
 
 .project-description {
@@ -141,7 +145,8 @@
 @media screen and (max-width: 768px) {
     .projects-grid {
         align-items: center;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-template-columns: 1fr;
+        padding: 1rem;
     }
     
     .project-card {
