--- a/styles/about.css
+++ b/styles/about.css
@@ -117,6 +117,11 @@
     display: none;
 }
 
+.tab-contents a{
+    color: var(--text-primary);
+    text-decoration: none;
+}
+
 .tab-contents.active-tab{
     display: block;
 }
