--- a/styles/general.css
+++ b/styles/general.css
@@ -30,7 +30,6 @@ html {
 
 body {
     font-family: 'Poppins', 'sans-serif';
-    /* background-color: var(--primary); */
     background: var(--gradient-1);
     color: var(--text-primary);
     padding-top: 25px;
@@ -41,10 +40,6 @@ body {
 
 .floating {
     animation: float 6s ease-in-out infinite;
-}
-
-.floating2 {
-    animation: float 15s ease-in-out infinite;
 }
 
 /* Loading Screen */
@@ -70,7 +65,9 @@ body {
 }
 
 @keyframes spin {
-    100% { transform: rotate(360deg); }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 @media (min-width: 1024px) {
@@ -95,6 +92,7 @@ body {
 
 /* Responsive Design */
 @media (max-width: 1080px) {
+
     .hero,
     .about,
     .experience,
@@ -105,6 +103,7 @@ body {
 }
 
 @media (max-width: 768px) {
+
     .hero,
     .about,
     .experience,
@@ -120,6 +119,7 @@ body {
 }
 
 @media (max-width: 480px) {
+
     .hero,
     .about,
     .experience,
@@ -139,6 +139,7 @@ body {
         opacity: 0;
         transform: translateY(20px);
     }
+
     to {
         opacity: 1;
         transform: translateY(0);
@@ -146,9 +147,12 @@ body {
 }
 
 @keyframes float {
-    0%, 100% {
+
+    0%,
+    100% {
         transform: translateY(0);
     }
+
     50% {
         transform: translateY(-20px);
     }
