--- a/styles/hero.css
+++ b/styles/hero.css
@@ -19,8 +19,47 @@
 
 .hero-buttons{
     display: grid;
-    row-gap: 1rem;
+    grid-template-columns: 1fr 1fr;
+    /* column-gap: 1rem; */
 }
+
+.hero-buttons .magnetic-btn {
+    position: relative;
+    font-size: 1.2vmax;
+    text-align: center;
+    text-decoration: none;
+    width: fit-content;
+    height: 4.2vmax;
+    font-weight: 400;
+    color: var(--text);
+    margin: 1.5vmax;
+    padding: 1rem 2rem;
+    background: var(--gradient-3);
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    transform-style: preserve-3d;
+}
+
+/* .button {
+    color: var(--secondary);
+    background: var(--gradient-3);
+    border: 1px solid var(--secondary);
+    border-radius: 6px;
+    padding: 1.25rem;
+    font-size: 18px;
+    font-family: monospace;
+    line-height: 1;
+    text-decoration: none;
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.button:hover {
+    background-color: var(--hover);
+    outline: none;
+} */
 
 .hero-details{
     display: flex;
@@ -41,7 +80,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transform: scale(1);
+}
+
+.hero-img-mobile{
+    display: none;
 }
 
 .hero::before {
@@ -82,6 +124,10 @@
     margin: 0;
 }
 
+.icon-container{
+    margin-top: 20px;
+}
+
 .hero-icons {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -89,39 +135,19 @@
     align-items: center;
     justify-content: center;
     padding: 1rem;
-    margin-top: 40px;
 }
 
 .hero-icons i{
     font-size: 25px;
     height: 40px;
     width: 40px;
-    color: var(--secondary);
+    color: var(--text-primary);
     transition: transform 0.2s, color 0.2s;
 }
 
 .hero-icons i:hover {
     transform: scale(1.1);
-    color: #8a42e3;
-}
-
-.button {
-    color: var(--secondary);
-    background-color: transparent;
-    border: 1px solid var(--secondary);
-    border-radius: 4px;
-    padding: 1.25rem 1.75rem;
-    font-size: 18px;
-    font-family: monospace;
-    line-height: 1;
-    text-decoration: none;
-    cursor: pointer;
-    transition: var(--transition);
-}
-
-.button:hover {
-    background-color: var(--hover);
-    outline: none;
+    color: #ab75ed;
 }
 
 @media (max-width: 550px) {
@@ -129,13 +155,26 @@
         display: none;
     }
 
-    .hero-content{
-        grid-template-columns: 1fr;
+    .hero-img-mobile{
+        display: block; 
+        position: absolute; 
+        opacity: 0.5;  
+        z-index: -1;   
+        left: -10px; 
+        top: 40px;
+        bottom: 0px;
+        object-fit: cover;
     }
 
     .hero-description{
         max-width: 350px;
         padding: 2vmax;
         margin-bottom: 55px;
+    }
+
+    .hero-buttons .magnetic-btn{
+        font-size: 1.5vmax;
+        text-wrap: nowrap;
+        height: fit-content;
     }
 }
