--- a/styles/hero.css
+++ b/styles/hero.css
@@ -76,6 +76,18 @@
     margin-bottom: 10px;
 }
 
+.scroll-btn{
+    display: flex;
+    align-items: center;
+    margin-top: 8px;
+    color: var(--text-primary);
+    cursor: pointer;
+}
+
+.scroll-btn img{
+    height: 2rem;
+}
+
 .hero-img {
     width: 100%;
     height: 100%;
