--- a/styles/projects.css
+++ b/styles/projects.css
@@ -26,8 +26,8 @@
 .project-help{
     margin-left: 40px;
     margin-bottom: 2rem;
-    font-size: 1.7max;
-    color: rgb(168, 168, 168);
+    font-size: 1.3rem;
+    color: var(--text);
 }
 
 /* Grid layout for projects */
@@ -146,6 +146,10 @@
         align-items: center;
         grid-template-columns: 1fr;
         padding: 1rem;
+    }
+
+    .project-help{
+        font-size: 1rem;
     }
     
     .project-card {
