--- a/styles/contact.css
+++ b/styles/contact.css
@@ -43,12 +43,14 @@
     padding: 2vmax;
 }
 
-.copyable{
+.details{
+    color: var(--text-secondary);
     cursor: pointer;
+    transition: color 0.3s;
 }
 
-.copyable:hover{
-    text-decoration: underline;
+.details:hover{
+    color: var(--text-primary);
 }
 
 /* Magnetic Buttons */
